# ChangeLog for x11-wm/pwm
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/pwm/Attic/ChangeLog,v 1.10 2004/06/28 02:54:34 agriffis Exp $

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> pwm-1.0.20010309.ebuild,
  pwm-1.0.20030617.ebuild:
  QA - fix use invocation

  18 Jun 2004; Jason Wever <weeve@gentoo.org> pwm-1.0.20030617.ebuild:
  Stable on sparc.

  06 Mar 2004; Markus Nigbur <pyrania@gentoo.org> pwm-1.0.20010309.ebuild:
  SRC_URI fixup.

*pwm-1.0.20030617 (25 Sep 2003)

  25 Sep 2003; Martin Holzer <mholzer@gentoo.org> pwm-1.0.20030617.ebuild:
  Version bumped. closes #25995.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*pwm-1.0.20010309 (1 Feb 2002)

  17 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> pwm-1.0.20010309.ebuild :
  Added IUSE.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.